welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: value update is not a member of String
if(litMessage()=test)
   ^BDRBuggle:7: error: value update is not a member of String
	if (litMessage()="R") {
            ^BDRBuggle:10: error: value update is not a member of String
}else if(litMessage()="L") {
         ^BDRBuggle:13: error: value update is not a member of String
}else if(litMessage()="I") {
         ^BDRBuggle:17: error: value update is not a member of String
}else if (litMessage()="A") {
          ^BDRBuggle:19: error: value update is not a member of String
}else if (litMessage()="B") {
          ^BDRBuggle:22: error: value update is not a member of String
}else if (litMessage()="C") {
          ^BDRBuggle:26: error: value update is not a member of String
}else if(litMessage()="Z") {
         ^BDRBuggle:28: error: value update is not a member of String
}else if (litMessage()="Y"){
          ^BDRBuggle:31: error: value update is not a member of String
}else if(litMessage()="X"){
         ^